# rust-sgx-remote-attestation

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  run.sh
crypto/: Cargo.toml
crypto/src/: cmac.rs  key_exchange.rs  lib.rs  random.rs  sha256.rs  signature.rs
ra-client/: Cargo.toml
ra-client/examples/: tls-client.rs
ra-client/src/: context.rs  error.rs  lib.rs
ra-common/: Cargo.toml
ra-common/src/: lib.rs  msg.rs  tcp.rs
ra-enclave/: Cargo.toml
ra-enclave/examples/: sp_vkey.rs  tls-enclave.rs
ra-enclave/examples/data/vendor-keys/: private_key.pem
ra-enclave/src/: context.rs  error.rs  lib.rs  local_attestation.rs
ra-sp/: Cargo.toml
ra-sp/examples/: tls-sp.rs
ra-sp/examples/data/: settings.json
ra-sp/examples/data/sp-keys/: public_key.pem
ra-sp/src/: attestation_response.rs  config.rs  context.rs  error.rs  ias.rs  lib.rs
sample-client/: Cargo.toml
sample-client/src/: main.rs
sample-enclave/: Cargo.toml
sample-enclave/.cargo/: config
sample-enclave/src/: main.rs  sp_vkey.rs
sample-sp/: Cargo.toml
sample-sp/data/: settings.json
sample-sp/data/sp-keys/: private_key.pem
sample-sp/src/: main.rs
sgx-crypto/: Cargo.toml
sgx-crypto/src/: certificate.rs  cmac.rs  digest.rs  error.rs  key_exchange.rs  lib.rs  pem_parser.rs  random.rs  signature.rs  stream.rs  tls_psk.rs
sgx-crypto/src/secure_channel/: decryption.rs  encryption.rs  mod.rs
