[package]
name = "crypto"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

[dependencies]
cmac = "0.2.0"
crypto-mac = "0.7.0"
aes = "0.3.2"
block-cipher-trait = "0.6.2"
untrusted = "0.6.2"
regex = "1.3.3"
base64 = "0.11"
x509-parser = "0.6.0"
webpki = "0.19.1"
ring = "=0.14.5"
