[package]
name = "ra-client"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
aesm-client = "0.2"
sgx-isa = "0.3.1"
ra-common = { path = "../ra-common" }
crypto = { path = "../crypto" }
