[package]
name = "ra-client"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

[features]
verbose = []

[dependencies]
bincode = "1.2.1"
aesm-client = "0.5"
sgx-isa = "0.3"
ra-common = { path = "../ra-common" }
sgx-crypto = { path = "../sgx-crypto" }

[[example]]
name = "tls-client"
test = false 
