[package]
name = "ra-common"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10.2"
serde-big-array = "0.2.0"
crypto = { path = "../crypto" }
