[package]
name = "ra-sp"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

[features]
verbose = []
example = ["mbedtls"]

[dependencies]
bincode = "1.2.1"
http = "0.2"
hyper = "0.13"
hyper-tls = "0.4"
hex = "0.4"
regex = "1.3.3"
base64 = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.1.0"
byteorder = "1.3.2"
tokio = { version = "0.2", features = ["full"]}
sgxs = "0.7.2"
sgx-isa = "0.3.1"
sgx-crypto = { path = "../sgx-crypto" }
ra-common = { path = "../ra-common" }
mbedtls = { version = "0.5.4", optional = true }

[[example]]
name = "tls-sp"
test = false
required-features = ["example"]
