[package]
name = "sample-enclave"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

[dependencies]
ra-common = { path = "../ra-common" }
ra-enclave = { path = "../ra-enclave" }

[patch.crates-io]
ring = { git = "https://github.com/akash-fortanix/ring.git", rev = "5b5b3792fc409288039937ca422ebdd8426de8a8" }
