[package]
name = "sample-enclave"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

[dependencies]
ra-common = { path = "../ra-common" }
ra-enclave = { path = "../ra-enclave" }

# Enclave must be patched with this SGX version of Ring
[patch.crates-io]
ring = { git = "https://github.com/ndokmai/ring.git", rev = "20d46166db939bd10a2abf0c7eed980a8e7be57e" }
