[package]
name = "sample-enclave"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

[dependencies]
byteorder = "1.2.1"
ra-common = { path = "../ra-common" }
ra-enclave = { path = "../ra-enclave" }
sgx-crypto = { path = "../sgx-crypto" }

# Enclave must be patched with this SGX version of Ring
[patch.crates-io]
ring = { git = "https://github.com/ndokmai/ring.git", branch = "sgx-target" }
