[package]
name = "sample-sp"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"]}
ra-sp = { path = "../ra-sp" }
ra-common = { path = "../ra-common" }
