[package]
name = "sample-sp"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
byteorder = "1.2.1"
ra-sp = { path = "../ra-sp", features = ["verbose"]}
ra-common = { path = "../ra-common" }
sgx-crypto = { path = "../sgx-crypto" }
